--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 # Weather Dashboard
 ## Description
-
-
+This is app is a weather dashboard for the current and future weather conditions of the city that is searched. After city is searched, you will be presented with current weather conditions. You will be presented wit the city name, the date, an icon representing the weather conditions, the temperature, the wind speed, and the humidity.
+You will also be presented with a 5-day weather forecast. 
 
 ## Table of contents
 
@@ -11,7 +11,7 @@
 * [License](#License)
 
 ## Usage
-
+In order to to see weather conditions, a zip code must be entered. 
 ## Visuals
 ![This is an image]()
 
