--- a/README
+++ b/README
@@ -13,15 +13,15 @@ You will also be presented with a 5-day weather forecast.
 ## Usage
 In order to to see weather conditions, a zip code must be entered. 
 ## Visuals
-![This is an image]()
+![This is an image](/assets/images/weather-dashboard.png)
 
 
 ## Link 
 You could access the deployed application by clicking on the link below. 
 
-[Weather Dashboard]()
+[Weather Dashboard](https://ruskin20.github.io/Weather-dashboard/)
 
 ## License
-[MIT LICENSE]()
+[MIT LICENSE](https://github.com/Ruskin20/Weather-dashboard/blob/main/LICENSE)
 
 
